crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R0_minus_R3.stderr
error[E0277]: cannot subtract `Relative<3>` from `Relative<0>`
 --> tests/ui/generated/should_fail/test__kiss_ladder__R0_minus_R3.rs:5:22
  |
5 |    let _ = R0::new() - R3::new();
  |                      ^ no implementation for `Relative<0> - Relative<3>`
  |
  = help: the trait `Sub<Relative<3>>` is not implemented for `Relative<0>`
  = help: the following other types implement trait `Sub<Rhs>`:
            <Relative<0> as Sub<Relative<1>>>
            <Relative<0> as Sub>
            <Relative<1> as Sub<Relative<2>>>
            <Relative<1> as Sub>
            <Relative<2> as Sub<Relative<3>>>
            <Relative<2> as Sub>
            <Relative<3> as Sub<Relative<4>>>
            <Relative<3> as Sub>
